# clean_code_challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  environment.yml  main.py  pyproject.toml  requirements-dev.txt  setup.py
clean_code_challenge/: __init__.py  config.py  io.py  main.py  util.py
requirements/: base.in  base.txt
scripts/: main.py
src/clean_code/: __about__.py  __init__.py  logger.py  logging_config.yml
src/clean_code/data/: dishwasher.py  key_tags.py  recipes.py
src/dishwasher/: __main__.py
src/dishwasher/data/: attendance.py  dishwasher.py  recipes.py
src/dishwasher/features/: build_features.py
src/dishwasher/model/: train.py
